--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -138,6 +138,18 @@
 				</div>
 			</div>
 		</div>
+		<script type="text/javascript">
+		    $("#defaultUnchecked").click(function(){
+		        if($(this).prop("checked") == true){
+		            $("#pp").text("- " + [[${buyer.points}]] / 100 + " $");
+		            $("#tt").text([[${order.totalPrice}]] - ([[${buyer.points}]] / 100) + " $");
+		        }
+		        else if($(this).prop("checked") == false){
+		            $("#pp").text("0 $");
+		            $("#tt").text([[${order.totalPrice}]] + " $");
+		        }
+		    });
+		</script>
 	</div>
 </body>
 </html>
