--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -30,7 +30,6 @@
 		</div>
 		<div class="container" sec:authorize="!hasAuthority('ROLE_ADMIN')"
 			style="margin-top: 10px;">
-			<div th:if="${productList.size() > 0 }">
 				<div sec:authorize="hasAuthority('ROLE_BUYER')"
 					style="padding: 10px; padding-left: 0px;">
 					<div class="dropdown">
@@ -60,7 +59,7 @@
 						<div class="card">
 							<img th:src="'data:image/png;base64,' + ${product.photoBase64}"
 								class="card-img-top" alt="image"
-								style="width: 100%; height: 50%;">
+								style="height: 250px;">
 							<div class="card-body">
 								<h5 class="card-title" th:text="${product.name}">Card title</h5>
 								<p class="card-text" style="height: 48px;"
@@ -170,10 +169,6 @@
 						</tr>
 					</tbody>
 				</table>
-			</div>
-			<div th:if="${productList.size() == 0 }" style="text-align: center;">
-				<img th:src="@{/img/no-data.png}">
-			</div>
 		</div>
 	</div>
 
