--- a/src/main/resources/templates/follow.html
+++ b/src/main/resources/templates/follow.html
@@ -20,6 +20,7 @@
 							<th>First Name</th>
 							<th>Last Name</th>
 							<th>Email</th>
+							<th>Unfollow</th>
 						</tr>
 					</thead>
 
@@ -29,6 +30,10 @@
 							<td><span th:text="${seller.firstName}">First Name</span></td>
 							<td><span th:text="${seller.lastName}">Last Name</span></td>
 							<td><span th:text="${seller.email}">Email</span></td>
+							<td>
+								<a type="button" class="btn btn-primary mb-3"
+								   th:href="@{'/unfollow'(id=${seller.userId})}">Unfollow</a>
+							</td>
 						</tr>
 					</tbody>
 				</table>
